#
# Use this configuration file to control what RobotPy packages are installed
# on your RoboRIO
#

[tool.robotpy]

# Version of robotpy this project depends on
robotpy_version = "2024.3.2.2"

# Which extra RobotPy components should be installed
# -> equivalent to `pip install robotpy[extra1, ...]
## Use pipenv to install deps from here (pipenv run sync)
robotpy_extras = [
    "all",
    # "apriltag",
    # "commands2",
    # "cscore",
    # "navx",
    # "pathplannerlib",
    # "phoenix5",
    # "phoenix6",
    # "photonvision",
    # "playingwithfusion",
    # "rev",
    # "romi",
    # "sim",
    # "xrp",
]

# Other pip packages to install
requires = []

[project]
name = "reefscape2025"
version = "0.0.1"
description = "Cougar Robotics 1982 2025 FRC Code"
authors = [
    {name = "SMNW 1982", email = "cougarrobotics1982@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "SEE LICENSE FILE"}

